Projeto atualizado com acessibilidades

--- a/figma-to-html-V.1/contato.html
+++ b/figma-to-html-V.1/contato.html
@@ -115,7 +115,7 @@
 </div>
 
 <!-- Inclua o JavaScript -->
-<script src="acessibilidade.js"></script>
+<script src="js/acessibilidade.js"></script>
 
 </body>
 </html>
