--- a/figma-to-html-V.1/novidades.html
+++ b/figma-to-html-V.1/novidades.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Novidades - Tech Cursos</title>
     <link href="./css/noticia1.css" rel="stylesheet">
+    <script src="js/acessibilidade.js"></script>
+   <link rel="stylesheet" href="./css/acessibilidade.css">
+
+
     <style>
         .page-container {
             max-width: 1000px;
@@ -207,4 +211,37 @@
 
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </body>
+<!-- Barra de Acessibilidade -->
+<div class="barra-acessibilidade">
+    <button class="botao-acessibilidade" id="botao-acessibilidade">A</button>
+    <div class="menu-acessibilidade" id="menu-acessibilidade">
+        <div class="opcao-acessibilidade" id="aumentar-fonte">
+            <span>A+</span> Aumentar Fonte
+        </div>
+        <div class="opcao-acessibilidade" id="diminuir-fonte">
+            <span>A-</span> Diminuir Fonte
+        </div>
+        <div class="opcao-acessibilidade" id="resetar-fonte">
+            <span>A</span> Fonte Normal
+        </div>
+        <div class="opcao-acessibilidade" id="toggle-contraste">
+            <span>☀</span> Alto Contraste
+        </div>
+    </div>
+</div>
+
+<!-- Botão Voltar ao Topo -->
+<button id="voltar-topo" title="Voltar ao topo">↑</button>
+
+<!-- VLibras -->
+<div vw class="enabled">
+    <div vw-access-button class="active"></div>
+    <div vw-plugin-wrapper>
+        <div class="vw-plugin-top-wrapper"></div>
+    </div>
+</div>
+
+<!-- Inclua o JavaScript -->
+<script src="js/acessibilidade.js"></script>
+
 </html>
