--- a/figma-to-html-V.1/CursosDescricao.html
+++ b/figma-to-html-V.1/CursosDescricao.html
@@ -203,5 +203,38 @@
             // ... implementação original
         }
     </script>
+    <!-- Barra de Acessibilidade -->
+<div class="barra-acessibilidade">
+    <button class="botao-acessibilidade" id="botao-acessibilidade">A</button>
+    <div class="menu-acessibilidade" id="menu-acessibilidade">
+        <div class="opcao-acessibilidade" id="aumentar-fonte">
+            <span>A+</span> Aumentar Fonte
+        </div>
+        <div class="opcao-acessibilidade" id="diminuir-fonte">
+            <span>A-</span> Diminuir Fonte
+        </div>
+        <div class="opcao-acessibilidade" id="resetar-fonte">
+            <span>A</span> Fonte Normal
+        </div>
+        <div class="opcao-acessibilidade" id="toggle-contraste">
+            <span>☀</span> Alto Contraste
+        </div>
+    </div>
+</div>
+
+<!-- Botão Voltar ao Topo -->
+<button id="voltar-topo" title="Voltar ao topo">↑</button>
+
+<!-- VLibras -->
+<div vw class="enabled">
+    <div vw-access-button class="active"></div>
+    <div vw-plugin-wrapper>
+        <div class="vw-plugin-top-wrapper"></div>
+    </div>
+</div>
+
+<!-- Inclua o JavaScript -->
+<script src="js/acessibilidade.js"></script>
+
 </body>
 </html>
