--- a/figma-to-html-V.1/noticia3.html
+++ b/figma-to-html-V.1/noticia3.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mercado de Tecnologia - Tech Cursos</title>
     <link href="./css/noticia1.css" rel="stylesheet">
+       <link rel="stylesheet" href="./css/acessibilidade.css">
 </head>
 <body>
     <div class="noticia-container">
@@ -30,4 +31,37 @@
         </article>
     </div>
 </body>
+<!-- Barra de Acessibilidade -->
+<div class="barra-acessibilidade">
+    <button class="botao-acessibilidade" id="botao-acessibilidade">A</button>
+    <div class="menu-acessibilidade" id="menu-acessibilidade">
+        <div class="opcao-acessibilidade" id="aumentar-fonte">
+            <span>A+</span> Aumentar Fonte
+        </div>
+        <div class="opcao-acessibilidade" id="diminuir-fonte">
+            <span>A-</span> Diminuir Fonte
+        </div>
+        <div class="opcao-acessibilidade" id="resetar-fonte">
+            <span>A</span> Fonte Normal
+        </div>
+        <div class="opcao-acessibilidade" id="toggle-contraste">
+            <span>☀</span> Alto Contraste
+        </div>
+    </div>
+</div>
+
+<!-- Botão Voltar ao Topo -->
+<button id="voltar-topo" title="Voltar ao topo">↑</button>
+
+<!-- VLibras -->
+<div vw class="enabled">
+    <div vw-access-button class="active"></div>
+    <div vw-plugin-wrapper>
+        <div class="vw-plugin-top-wrapper"></div>
+    </div>
+</div>
+
+<!-- Inclua o JavaScript -->
+<script src="js/acessibilidade.js"></script>
+
 </html>
